@@ -1,5 +1,7 @@
 New entries should be added at the top
 
+2005-07-26 backend_gtk.py: allow 'f' key to toggle window fullscreen mode
+
 2005-07-26 backend_svg.py: write "<.../>" elements all on one line and remove 
            surplus spaces - SC
 
